# CRayCast

./: CMakeLists.txt
CRayCast/: constants.h  main.c
CRayCast/data/: grid.c  grid.h  player.c  player.h  ray.c  ray.h
CRayCast/game_loop/: process_input.c  process_input.h  render.c  render.h  update.c  update.h
CRayCast/init/: initialize.c  initialize.h
